--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 
 {
   "version": 2,
+  "public": true,
+  "cleanUrls": true,
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "cleanUrls": true
+  ]
 }
